#249 Migrate to filesystem at ProjectsRenderer.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>